assets/src/scss/pages/post/_comments-block.scss
.comments-block h3 {
  font-size: 16px;
  margin-bottom: 16px;
}

// Adds nesting on comments
@include comment-level;

.single-comment {
  padding-bottom: 24px;
  font-family: var(--headings--font-family);

  &:not(:first-of-type) {
    border-top: 1px solid transparentize($grey-20, 0.5);
    padding-top: 24px;
  }
}

.single-comment-text {
  font-size: 16px;
  line-height: 1.5;
  margin-bottom: 8px;
}

.single-comment-meta {
  font-size: 14px;
  color: $grey-40;

  .author-info,
  .comment-date {
    display: inline-block;
  }

  .author-info::after {
    content: "\2022";
    padding-inline-start: 8px;
    padding-inline-end: 6px;
  }

  .comment-reply-link {
    display: block;
    font-weight: bold;
    font-size: 14px;
    margin-top: 16px;
  }
}

@include medium-and-up {
  .comments-block h3 {
    margin-bottom: 24px;
  }

  .single-comment-meta {
    .comment-reply-link {
      float: right;
      margin-top: 0;

      html[dir="rtl"] & {
        float: left;
      }
    }
  }
}

@include large-and-up {
  .comments-block {
    max-width: 696px;
  }
}

@include x-large-and-up {
  .comments-block {
    max-width: 736px;
  }
}

